--- a/client/css/ui.css
+++ b/client/css/ui.css
@@ -20,6 +20,7 @@ pre.message {
     font-family: 'Droid Sans', sans;
     padding: 0;
     margin: 0;
+    text-wrap: normal;
 }
 
 @keyframes button-background {
