--- a/client/css/ui.css
+++ b/client/css/ui.css
@@ -21,6 +21,7 @@ pre.message {
     padding: 0;
     margin: 0;
     text-wrap: normal;
+    white-space: wrap;
 }
 
 @keyframes button-background {
