--- a/client/css/ui.css
+++ b/client/css/ui.css
@@ -89,3 +89,47 @@ input[type='text']:focus,
 input[type='password']:focus {
     border: 0.1em solid #D96459;
 }
+
+input[type='checkbox'] {
+    visibility: hidden;
+}
+
+input[type='checkbox']:checked + label .knob {
+    left: 0.6em;
+    background: #d9d92b;
+}
+
+.checkbox label {
+    display: flex;
+    align-items: center;
+}
+
+.checkbox label > span {
+    color: white;
+    padding: 0.25em;
+    padding-right: 1em;
+}
+
+.checkbox .slider {
+    position: relative;
+    width: 1.6em;
+    height: 0.8em;
+    border-radius: 0.4em;
+    background: black;
+    opacity: 0.6;
+    box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.8),
+        0 1px 0 rgba(255,255, 255, 0.8);
+}
+
+.checkbox .slider .knob {
+    display: inline-block;
+    position: relative;
+    width: 1.2em;
+    height: 1.2em;
+    border-radius: 0.6em;
+    background: white;
+    box-shadow: 0 1px 2px black;
+    transition: all 0.3s ease;
+    top: -0.2em;
+    left: -0.2em;
+}
