--- a/client/css/style.css
+++ b/client/css/style.css
@@ -17,8 +17,10 @@ body {
 
 #sidebar {
     width: 15em;
-    margin: 1em;
+    margin: 0.75em;
+    padding: 0.5em 0;
     z-index: 10;
+    border-right: 1px solid #ccc;
 }
 
 #typing-bar {
@@ -55,17 +57,59 @@ body {
 }
 
 .conversation-button {
+    position: relative;
     padding: 1em;
     border: 0;
     background: transparent;
     color: black;
     text-align: left;
     box-shadow: none;
+    border-top-left-radius: 0.25em;
+    border: 1px solid #ccc;
+    border-right: none;
 }
 
 .conversation-button:hover {
-    background: #ddd9cf;
+    background: rgba(255, 255, 255, 0.6);
     animation-name: none;
+}
+
+.conversation-title {
+    font-weight: bold;
+}
+
+.conversation-status {
+    font-size: 70%;
+}
+
+.conversation-status-indicator {
+    position: absolute;
+    width: 1em;
+    height: 1em;
+    border-radius: 0.5em;
+    background: #999;
+    top: 0.5em;
+    right: 0.5em;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.6);
+}
+
+.conversation-status-indicator.user-connected {
+    background: #588d60;
+}
+
+.conversation-status-indicator.user-disconnected {
+    background: #f49136;
+}
+
+.selected-conversation .conversation-beauty {
+    position: absolute;
+    top: -1px;
+    right: -1px;
+    width: 1px;
+    height: 100%;
+    background: #f8f3ea;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
 }
 
 .message-list-container {
